--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react": "react-scripts start",
+    "react:linux": "sudo node ./node_modules/.bin/react-scripts start"
   },
   "eslintConfig": {
     "extends": [
