--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node-dev -r dotenv/config ./bin/www",
-    "dev:linux": "sudo node ./node_modules/.bin/node-dev -r dotenv/config ./bin/www"
+    "dev:sudo": "sudo node ./node_modules/.bin/node-dev -r dotenv/config ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
