--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "deploy": "node-dev ./bin/www --https",
-    "server": "node-dev ./bin/www",
-    "deploy:sudo": "sudo node ./node_modules/.bin/node-dev ./bin/www --https",
-    "server:sudo": "sudo node ./node_modules/.bin/node-dev ./bin/www"
+    "deploy": "node-dev ./bin/www",
+    "server": "node-dev ./bin/www --http",
+    "deploy:sudo": "sudo node ./node_modules/.bin/node-dev ./bin/www",
+    "server:sudo": "sudo node ./node_modules/.bin/node-dev ./bin/www --http"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
