--- a/package.json
+++ b/package.json
@@ -25,11 +25,18 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently --raw 'npm:react' 'npm:server'",
+    "start": "concurrently --raw 'npm:static' 'npm:server'",
+    "start:sudo": "concurrently --raw 'npm:static:sudo' 'npm:server:sudo'",
+    "build": "react-scripts build",
+    "deploy:win": "",
+    "deploy:linux": "",
+    "dev": "concurrently --raw 'npm:react' 'npm:server'",
+    "dev:sudo": "concurrently --raw 'npm:react:sudo' 'npm:server:sudo'",
     "react": "react-scripts start",
-    "server": "cd server/ && npm run server",
-    "start:sudo": "concurrently --raw 'npm:react:sudo' 'npm:server:sudo'",
     "react:sudo": "sudo node ./node_modules/.bin/react-scripts start",
+    "static": "cd server/ && npm run static",
+    "static:sudo": "cd server/ && npm run static:sudo",
+    "server": "cd server/ && npm run server",
     "server:sudo": "cd server/ && npm run server:sudo"
   },
   "eslintConfig": {
