--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "start": "concurrently --raw 'npm:static' 'npm:server'",
     "start:sudo": "concurrently --raw 'npm:static:sudo' 'npm:server:sudo'",
     "build": "react-scripts build",
-    "deploy:win": "",
-    "deploy:linux": "",
+    "deploy:win": "(rmdir /s /q .\\build || exit 0) && npm run build",
+    "deploy:linux": "(rm -rf ./build) && npm run build",
     "dev": "concurrently --raw 'npm:react' 'npm:server'",
     "dev:sudo": "concurrently --raw 'npm:react:sudo' 'npm:server:sudo'",
     "react": "react-scripts start",
