--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-timer-hook": "^3.0.7",
     "sonner": "^0.7.1",
     "valid-filename": "^4.0.0",
     "web-vitals": "^2.1.4"
