--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@fontsource/inter": "^5.0.8",
     "@mui/icons-material": "^5.14.8",
     "@mui/joy": "^5.0.0-beta.5",
-    "@mui/material": "^5.14.9",
+    "@mui/material": "^5.14.13",
+    "@mui/x-date-pickers": "^6.16.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "concurrently": "^8.2.1",
+    "dayjs": "^1.11.10",
     "fuse.js": "^6.6.2",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
