--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "fs-extra": "^11.1.1",
     "http-errors": "~1.6.3",
     "mime": "^3.0.0",
     "morgan": "~1.9.1",
