--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
+    "decompress": "^4.2.1",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "fs-extra": "^11.1.1",
