--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,12 @@
     "server:sudo": "sudo node ./node_modules/.bin/node-dev ./bin/www"
   },
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "check-disk-space": "^3.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
-    "decompress": "^4.2.1",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "fs-extra": "^11.1.1",
