--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "server": "node-dev ./bin/www",
-    "server:sudo": "sudo node ./node_modules/.bin/node-dev ./bin/www"
+    "server": "run-script-os",
+    "server:win32": "node-dev ./bin/www",
+    "server:linux": "sudo node ./node_modules/.bin/node-dev ./bin/www"
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
