--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seraph",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-timer-hook": "^3.0.7",
     "sonner": "^0.7.1",
     "valid-filename": "^4.0.0",
@@ -32,8 +32,8 @@
     "start": "cd server/ && npm run server",
     "react": "run-script-os",
     "dev": "concurrently --raw 'npm:react' 'npm:start'",
-    "build": "react-scripts build",
     "deploy": "run-script-os",
+    "build": "react-scripts build",
     "react:win32": "react-scripts start",
     "react:linux": "sudo node ./node_modules/.bin/react-scripts start",
     "deploy:win32": "(rmdir /s /q .\\build || exit 0) && npm run build",
