--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "seraph",
-  "version": "1.0.1",
+  "version": "0.2.2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.8",
     "@mui/icons-material": "^5.14.8",
-    "@mui/joy": "^5.0.0-beta.24",
+    "@mui/joy": "^5.0.0-beta.5",
     "@mui/material": "^5.14.13",
     "@mui/x-date-pickers": "^6.16.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "react-timer-hook": "^3.0.7",
     "sonner": "^0.7.1",
     "valid-filename": "^4.0.0",
