--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
   },
   "scripts": {
     "start": "cd server/ && npm run server",
+    "dev": "concurrently --raw 'npm:react' 'npm:server'",
     "react": "run-script-os",
-    "dev": "concurrently --raw 'npm:react' 'npm:start'",
-    "deploy": "run-script-os",
+    "server": "cd server/ && npm run dev",
     "build": "react-scripts build",
+    "deploy": "run-script-os",
     "react:win32": "react-scripts start",
     "react:linux": "sudo node ./node_modules/.bin/react-scripts start",
     "deploy:win32": "(rmdir /s /q .\\build || exit 0) && npm run build",
